--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Priyanuj Dey | Portfolio</title>
-  <meta content="" name="description">
-  <meta content="Priyanuj Dey, Portfolio, VFX, Editing" name="keywords">
+  <meta content="A passionate Video Editor, VFX & GFX Artist based out of Mumbai, India. Available for freelance works!" name="description">
+  <meta content="Priyanuj Dey, Portfolio, VFX, Editing, Video Editing, Motion Graphics, GFX, FX, 3D, Chroma, Freelance" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -27,12 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal - v4.7.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -43,7 +37,7 @@
 
       <h1><a href="index.html">Priyanuj Dey</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+<!--  <a href="index.html" class="mr-auto"><img src="assets/img/Favicon.png" alt="" class="img-fluid"></a>-->
       <h2>I'm a passionate <span>VIDEO EDITOR, GFX & VFX ARTIST</span> from Mumbai, India</h2>
 
       <nav id="navbar" class="navbar">
@@ -59,9 +53,9 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
+		<a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
