Updated Resume & Services

--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
             <h3>Gaming</h3>
           </div>
         </div>
-        
+      </div>
 
-    </div><!-- End Interests -->
+<!-- End Interests -->
 
     <!-- ======= Testimonials ======= -->
 	  
@@ -357,10 +357,12 @@
 
       </div>
 -->
-   <!-- </div><!-- End Testimonials  -->
+<!-- End Testimonials  -->
 	  
-
-  </section><!-- End About Section -->
+   </div>
+		
+</section>
+<!-- End About Section -->
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
@@ -376,7 +378,7 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>About</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <p><em>Innovative and deadline-driven Media Artist with 4+ years of experience in editing and creating eye-catching motion graphics and FX stuffs for digital media from initial concept to final, polished deliverable.</em></p>
             <p>
             <ul>
               <li>Goregaon East, Mumbai, IN</li>
@@ -391,40 +393,47 @@
             <h4>Bachelor's in Filmmaking</h4>
             <h5>2017 - 2020</h5>
             <p><em>Whistling Woods International, Mumbai, MH, India</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <p>Pursued and completed a Bachelor's Degree in Filmmaking course with a specialization in Visual Effects with First Class Grades.</p>
           </div>
           <div class="resume-item">
             <h4>Senior Secondary School Degree</h4>
             <h5>2015 - 2017</h5>
-            <p><em>Kokrajhar Government College, Kokrajhar, AS, India&nbsp;</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <p><em>Kokrajhar Government College, Kokrajhar, AS, India</em></p>
+            <p>Graduated Higher Secondary School in Science Stream with First Class Marks.</p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
             <h4>Associate Video Editor</h4>
-            <h5>06, 2022 - Present</h5>
-            <p><em>QAD, Mumbai, MH, India </em></p>
+            <h5>06, 2022 - Present | Full-Time</h5>
+            <p><em><b>QAD</b>, Mumbai, MH, India&nbsp;</em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Developed the initial plan to produce Product Walk-Through Videos for the company's products.</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
             <h4>Video Editor &amp; Motion Graphics Artist</h4>
-            <h5>01, 2021 - 05, 2022</h5>
-            <p><em>Fitpage, Mumbai, MH, India&nbsp;</em></p>
+            <h5>01, 2021 - 05, 2022 | Full-Time</h5>
+            <p><em><b>Fitpage</b>, Mumbai, MH, India&nbsp;</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>Developed an initial plan for the brand's Youtube presence.</li>
+              <li>Handled all in-house media productions.</li>
+              <li>Curated plans and pipelines for all in-house video productions.</li>
+              <li>Produced and Edited 50+ workout videos &amp; 200+ Youtube Explainers.</li>
+            </ul>
+            </p>
+          </div>
+	      <div class="resume-item">
+            <h4>Visual Effects Artist</h4>
+            <h5>08, 2019 - Present | Part-Time</h5>
+            <p><em><b>Karkhana Studios</b>, Mumbai, MH, India&nbsp;</em></p>
+            <p>
+            <ul>
+              <li>Works as an in-house Visual Effects Specialist.</li>
             </ul>
             </p>
           </div>
@@ -446,15 +455,15 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Video Editing</a></h4>
+            <div class="icon"><i class="bx bx-video"></i></div>
+            <h4><a href="#portfolio">Video Editing</a></h4>
             <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
+            <div class="icon"><i class="bx bx-pen"></i></div>
             <h4><a href="">Motion Graphics</a></h4>
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
           </div>
@@ -462,7 +471,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <div class="icon"><i class="bx bx-color-fill" ></i></div>
             <h4><a href="">Logo Animation</a></h4>
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
           </div>
