Testing Portfolio Section
Added one video

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Priyanuj Dey | Portfolio</title>
+  <meta content="A passionate Video Editor, VFX & GFX Artist based out of Mumbai, India. Available for freelance works!" name="description">
+  <meta content="Priyanuj Dey, Portfolio, VFX, Editing, Video Editing, Motion Graphics, GFX, FX, 3D, Chroma, Freelance" name="keywords">
+  <meta content="Priyanuj Dey, Portfolio, VFX, Editing, Video Editing, Motion Graphics, GFX, FX, 3D, Chroma, Freelance" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
