--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
   <meta content="Priyanuj Dey, Portfolio, VFX, Editing, Video Editing, Motion Graphics, GFX, FX, 3D, Chroma, Freelance" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!--<link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">-->
+	
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="assets/img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/img/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="assets/img/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">	
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -36,10 +54,12 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Priyanuj Dey</a></h1>
+      <h1><a>Priyanuj Dey</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-<!--  <a href="index.html" class="mr-auto"><img src="assets/img/Favicon.png" alt="" class="img-fluid"></a>-->
-      <h2>I'm a passionate <span>VIDEO EDITOR, GFX &amp; VFX ARTIST</span> from Mumbai, India</h2>
+<!--      <a href="index.html" class="mr-auto"><img src="assets/img/Logo-Horizontal.png" alt="" class="img-fluid"></a>-->
+      <h2>I'm a passionate <span>VIDEO EDITOR, GFX &amp; VFX ARTIST</span> from Mumbai, India.</h2>
+		<br>
+	  <h6>Browse the site to know more about me!!</h6>
 
       <nav id="navbar" class="navbar">
         <ul>
