--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
       <!-- Uncomment below if you prefer to use an image logo -->
 <!--      <a href="index.html" class="mr-auto"><img src="assets/img/Logo-Horizontal.png" alt="" class="img-fluid"></a>-->
       <h2>I'm a passionate <span>VIDEO EDITOR, GFX &amp; VFX ARTIST</span> from Mumbai, India.</h2>
-		<br>
-	  <h6>Browse the site to know more about me!!</h6>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -107,8 +105,8 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 Dec 1999</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.priyanuj.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 97061 86907</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="">www.priyanuj.com</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:+919706186907">+91 97061 86907</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mumbai, India</span></li>
               </ul>
             </div>
@@ -116,7 +114,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:priyanujdey@live.com">priyanujdey@live.com</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:contact@priyanuj.com">contact@priyanuj.com</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
@@ -704,9 +702,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
+			  <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
        		  <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
-        	  <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
         	  <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
 <!--          <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>-->
               
@@ -718,7 +716,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p><a href="mailto:priyanujdey@live.com">priyanujdey@live.com</a></p>
+            <p><a href="mailto:contact@priyanuj.com">contact@priyanuj.com</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
