Updated Works Section

--- a/index.html
+++ b/index.html
@@ -464,54 +464,55 @@
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
-    <div class="container">
+    <div class="container" >
 
       <div class="section-title">
         <h2>Services</h2>
         <p>My Services</p>
       </div>
 
-      <div class="row">
+      <div class="row" a>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-video"></i></div>
-            <h4><a href="#portfolio">Video Editing</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <h4><a>Video Editing</a></h4>
+            <p>From youtube videos to documentaries, promo for your online course to workout videos, you can get it all here.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-pen"></i></div>
-            <h4><a href="">Motion Graphics</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <h4><a>Motion Graphics</a></h4>
+            <p>Custom supers, infographics, explainers, and also presets for Adobe Premiere Pro, I do it all.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-color-fill" ></i></div>
-            <h4><a href="">Logo Animation</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <h4><a>Logo Animation</a></h4>
+            <p>Get beautiful custom logo animation made for your brand.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">VFX</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <h4><a>VFX</a></h4>
+            <p>Need FX for your new short film? Connect with me now!</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Chroma Replacement</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+            <h4><a>Chroma Replacement</a></h4>
+            <p>Chroma Keying, BG Replacement, Mirror Replacemnt, etc</p>
           </div>
         </div>
 
+<!--
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
@@ -519,6 +520,7 @@
             <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
           </div>
         </div>
+-->
 
       </div>
 
