--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-   <a>© 2022 | Priyanuj Dey | All Rights Reserved</a> 
+   © 2022 | Priyanuj Dey | All Rights Reserved
   </div>
 
   <!-- Vendor JS Files -->
@@ -773,6 +773,10 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-536784f36ec791dc"></script>
+
 
 </body>
 
