--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
   <script src="assets/js/main.js"></script>
 
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
-  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-536784f36ec791dc"></script>
+<!--  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-536784f36ec791dc"></script>  -->
 
 
 </body>
