--- a/index.html
+++ b/index.html
@@ -534,6 +534,8 @@
       <div class="section-title">
         <h2>Portfolio</h2>
         <p>My Works</p>
+		<h1>This page is still under construction!!</h1>
+		  <br>
       </div>
 
       <div class="row">
@@ -758,18 +760,18 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-   © 2022 | Priyanuj Dey | All Rights Reserved
+   © 2022 | <a href="">Priyanuj Dey</a> | All Rights Reserved
   </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.js"></script>
+<!--  <script src="assets/vendor/glightbox/js/glightbox.js"></script>  -->
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+<!--  <script src="assets/vendor/php-email-form/validate.js"></script>  -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
