Updated few bugs.

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a>Priyanuj Dey</a></h1>
+      <h1><a href="">Priyanuj Dey</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
 <!--      <a href="index.html" class="mr-auto"><img src="assets/img/Logo-Horizontal.png" alt="" class="img-fluid"></a>-->
-      <h2>I'm a passionate <span>VIDEO EDITOR, GFX &amp; VFX ARTIST</span> from Mumbai, India.</h2>
+      <h2>I'm a passionate <span>VIDEO EDITOR, MOTION GRAPHICS &amp; VISUAL EFFECTS ARTIST</span> from Mumbai, India.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -97,9 +97,9 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Video Editor, GFX &amp; VFX Artist</h3>
+          <h3>Video Editor, Motion Graphics &amp; Visual Effects Artist</h3>
           <p class="fst-italic">
-            I'm an experienced Video Editor, VFX &amp; GFX adept in meeting client needs throughout the entirety of the process. Able to handle multiple projects simultaneously while providing the highest level of service, quality, and creativity. Accustomed to working well with others and committed to meeting deadlines and adhering to project guidelines.
+            I'm an experienced Video Editor, Motion Graphics &amp; Visual Effects artist adept in meeting client needs throughout the entirety of the process. Able to handle multiple projects simultaneously while providing the highest level of service, quality, and creativity. Accustomed to working well with others and committed to meeting deadlines and adhering to project guidelines.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -151,7 +151,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="250" data-purecounter-duration="1" class="purecounter">250</span>
+			<span data-purecounter-start="0" data-purecounter-end="250" data-purecounter-duration="1" class="purecounter">250</span>
             <p>Hours Of Support</p>
           </div>
         </div>
@@ -542,7 +542,7 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Video Editing</li>
+            <li data-filter=".filter-video">Video Editing</li>
             <li data-filter=".filter-card">Motion Graphics</li>
             <li data-filter=".filter-web">Visual Effects</li>
           </ul>
@@ -551,7 +551,7 @@
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-video">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -579,7 +579,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-video">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -621,7 +621,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-video">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
