Added Photography Service

--- a/index.html
+++ b/index.html
@@ -512,15 +512,15 @@
           </div>
         </div>
 
-<!--
+
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">3D Placement</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <h4><a href="">Photography</a></h4>
+            <p>Portfolio Shoot, Running/Sports Shoot, Portraits &nbsp; Product Shoot</p>
           </div>
         </div>
--->
+
 
       </div>
 
