Updated Meta Tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Priyanuj Dey | Portfolio</title>
   <meta content="A passionate Video Editor, VFX & GFX Artist based out of Mumbai, India. Available for freelance works!" name="description">
   <meta content="Priyanuj Dey, Portfolio, VFX, Editing, Video Editing, Motion Graphics, GFX, FX, 3D, Chroma, Freelance" name="keywords">
+  <meta property="og:image" content="assets/img/favicon/ms-icon-310x310.png" />
+  <meta property="og:title" content="Priyanuj Dey | Portfolio"/>  
+  <meta property="og:description" content="A passionate Video Editor, VFX & GFX Artist based out of Mumbai, India. Available for freelance works!"/>
+  <meta property="og:url" content="https://priyanuj.com"/>	
 
   <!-- Favicons -->
   <!--<link href="assets/img/favicon.png" rel="icon">
@@ -113,7 +117,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's in Filmmaking</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:contact@priyanuj.com">contact@priyanuj.com</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
