--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-42471095-6');
+  gtag('config', 'G-F2J97ZQGWP');
 </script>
+	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F2J97ZQGWP"></script>
+	
 	
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
