--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-                    <img src="assets/img/me.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/me.webp" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Video Editor, Motion Graphics &amp; Visual Effects Artist</h3>
