Added Social Links to footers

--- a/index.html
+++ b/index.html
@@ -800,9 +800,26 @@
     </section>
     <!-- End Contact Section -->
 
+    <!-- Credits Section -->
+
+
+
     <div class="credits">
-        © 2022 | <a href="">Priyanuj Dey</a> | All Rights Reserved
+
+
+        <div class="credits-social">
+            <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
+            <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        </div>
+
+
+        © 2022 | <a href="https://priyanuj.com">Priyanuj Dey</a> | All Rights Reserved
+
     </div>
+
+
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter.js"></script>
