--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                 <h2>Portfolio</h2>
                 <p>My Works</p>
                 <h1>This page is still under construction!!</h1>
-                <p>You can check them <a href="https://docs.google.com/document/d/1Ngqy7T9PFpZqaT4lGsoyFJ05LdpbZLkQzzmcuykLBzg/edit?usp=drivesdk">here</a></p>
+                <p>You can check them <a href="https://docs.google.com/document/d/1Ngqy7T9PFpZqaT4lGsoyFJ05LdpbZLkQzzmcuykLBzg/edit?usp=drivesdk" target="_blank">here</a></p>
                 <br>
             </div>
 
