New Services & Colors Fixed
Added 2 new services.
Fixed Contact page colors.

--- a/index.html
+++ b/index.html
@@ -542,11 +542,12 @@
                     </div>
                 </div>
 
+
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                     <div class="icon-box">
-                        <div class="icon"><i class="bx bx-slideshow"></i></div>
-                        <h4><a>Chroma Replacement</a></h4>
-                        <p>Chroma Keying, BG Replacement, Mirror Replacemnt, etc</p>
+                        <div class="icon"><i class="bx bx-video-recording"></i></div>
+                        <h4><a>Videography</a></h4>
+                        <p>Various video shoots for corporates and short-films. Adept in Sony A7 series of cameras.</p>
                     </div>
                 </div>
 
@@ -555,7 +556,24 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-camera"></i></div>
                         <h4><a>Photography</a></h4>
-                        <p>Portfolio Shoot, Running/Sports Photography, Portrait Shoot &nbsp; Product Shoot</p>
+                        <p>Portfolio Shoot, Running/Sports Photography, Portrait Shoot, Product Shoot, etc</p>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-desktop"></i></div>
+                        <h4><a>Website Design</a></h4>
+                        <p>Static websites like Portfolio, Landing Page, Digital Visiting Cards, etc</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-slideshow"></i></div>
+                        <h4><a>Chroma Replacement</a></h4>
+                        <p>Chroma Keying, BG Replacement, Mirror Replacemnt etc</p>
                     </div>
                 </div>
 
