Added filters to portfolio

--- a/index.html
+++ b/index.html
@@ -601,8 +601,9 @@
                     <ul id="portfolio-flters">
                         <li data-filter="*" class="filter-active">All</li>
                         <li data-filter=".filter-video">Video Editing</li>
-                        <li data-filter=".filter-card">Motion Graphics</li>
-                        <li data-filter=".filter-web">Visual Effects</li>
+                        <li data-filter=".filter-mg">Motion Graphics</li>
+                        <li data-filter=".filter-vfx">Visual Effects</li>
+                        <li data-filter=".filter-web">Website Design</li>
                     </ul>
                 </div>
             </div>
