--- a/portfolio-typography.html
+++ b/portfolio-typography.html
@@ -68,11 +68,17 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.min.css" rel="stylesheet">
 
 </head>
 
 <body>
+
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPV267Z"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <main id="main">
 
@@ -92,20 +98,8 @@
                                     <img src="assets/img/portfolio/portfolio-details-1.webp" alt="">
                                 </div>
 
-                                <div class="swipper-slide">
-                                    <div>
-                                        <video width="800" height="463" autoplay=true controls>
-                                            <source src="assets/vid/amar.mp4" type="video/mp4">
-                                        </video>
-                                    </div>
-                                </div>
-
                                 <div class="swiper-slide">
-                                    <img src="assets/vid/Typography/BookFlip-Render.mp4" alt="">
-                                </div>
-
-                                <div class="swiper-slide">
-                                    <img src="assets/vid/Typography/Bubble-Text-Master.mp4" alt="">
+                                    <img src="assets/img/portfolio/portfolio-details-2.webp" alt="">
                                 </div>
 
                             </div>
