--- a/portfolio-typography.html
+++ b/portfolio-typography.html
@@ -66,6 +66,7 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/css/ninja-slider.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.min.css" rel="stylesheet">
@@ -83,6 +84,81 @@
     <main id="main">
 
         <!-- ======= Portfolio Details ======= -->
+
+        <div id="portfolio-details" class="portfolio-details">
+            <div class="container">
+
+                <div class="row">
+
+                    <div class="col-lg-8">
+                        <h2 class="portfolio-title">Typography</h2>
+
+                        <div id="ninja-slider">
+                            <ul>
+                                <li>
+                                    <a class="ns-img" href="assets/img/portfolio/portfolio-details-1.webp"></a>
+                                </li>
+                                <li>
+                                    <div class="video">
+                                        <iframe src="https://www.youtube.com/embed/kMCZrJXqOnA" frameborder="0" allowfullscreen></iframe>
+                                    </div>
+                                    <a class="ns-img" href="assets/img/portfolio/portfolio-details-1.webp"></a>
+                                    <div class="caption">Supports Youtube, Vimeo and HTML video/audio</div>
+                                    <div class="video-playbutton-layer"></div>
+                                </li>
+                                <li>
+                                    <div class="video">
+                                        <iframe src="https://www.youtube.com/embed/kMCZrJXqOnA?enablejsapi=1" frameborder="0" allowfullscreen data-autoplay="false"></iframe>
+                                    </div>
+                                    <a class="ns-img" href="assets/img/portfolio/portfolio-details-1.webp"></a>
+                                    <!-- <div class="caption">This video starts from 3:36</div> -->
+                                    <div class="video-playbutton-layer"></div>
+                                </li>
+                                <li>
+                                    <div class="video">
+                                        <video controls width="100%">
+                                            <source src="img/mcvideo.mp4" type="video/mp4" />
+                                        </video>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a class="ns-img" href="img/5.jpg"></a>
+                                    <div class="video" style="background-color:transparent;height:auto;top:auto;bottom:0px;">
+                                        <audio controls data-autoplay="1">
+                                            <source src="img/mcaudio.mp3" type="audio/mpeg">
+                                        </audio>
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="fs-icon"></div>
+                            <div class="fs-icon" title="Expand/Close"></div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 portfolio-info">
+                        <h3 style="padding-top: 12px">Project information</h3>
+                        <ul>
+                            <li><strong>Category</strong>: Motion Graphics</li>
+                            <li><strong>Client</strong>: Self</li>
+                            <li><strong>Project date</strong>: March, 2022</li>
+                            <li><strong>Project URL</strong>: <a href="index.html">N/A</a></li>
+                        </ul>
+
+                        <p>
+                            Typography is an animation technique that uses moving text to capture attention, set a tone, and entertain. It seems to be everywhere right now—commercials, music videos, mobile apps, and websites use it to make their words more impactful and add an element
+                            of artistry.
+                        </p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+        </div>
+
+
+
+        <!--
         <div id="portfolio-details" class="portfolio-details">
             <div class="container">
 
@@ -127,6 +203,8 @@
 
             </div>
         </div>
+
+        -->
         <!-- End Portfolio Details -->
 
     </main>
@@ -153,7 +231,8 @@
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/js/ninja-slider.js"></script>
+    <script src="assets/js/ninjaVideoPlugin.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
