Updated ninja slider

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                             <p>Typography</p>
                             <div class="portfolio-links">
                                 <a href="assets/img/portfolio/portfolio-1.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Liquid Text"><i class="bx bx-plus"></i></a>
-                                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="View more"><i class="bx bx-link"></i></a>
+                                <a href="test-slider.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="View more"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -826,16 +826,14 @@
     <div class="credits">
 
 
-        <div class="credits-social">
-            <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        </div>
 
 
-        © 2022 | <a href="https://priyanuj.com">Priyanuj Dey</a> | All Rights Reserved
+        © 2022 | <a href="index.html">Priyanuj Dey</a> | All Rights Reserved |
 
+        <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
 
