--- a/test-slider.html
+++ b/test-slider.html
@@ -66,99 +66,72 @@
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/ninja-slider.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.min.css" rel="stylesheet">
+    <link href="assets/css/ninja-slider.css" rel="stylesheet">
 
 </head>
 
 <body>
-
-
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KPV267Z"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <main id="main">
 
-        <!-- ======= Portfolio Details ======= -->
-
         <div id="portfolio-details" class="portfolio-details">
             <div class="container">
-
                 <div class="row">
-
                     <div class="col-lg-8">
                         <h2 class="portfolio-title">Typography</h2>
 
-                        <div id="ninja-slider">
-                            <ul>
-                                <li>
-                                    <a class="ns-img" href="assets/img/portfolio/portfolio-details-1.webp"></a>
-                                </li>
-                                <li>
-                                    <div class="video">
-                                        <iframe width="747" height="420" src="https://www.youtube.com/embed/kMCZrJXqOnA" frameborder="0" data-autoplay="true" id="ninja-slider-ifr2"></iframe>
-                                    </div>
-                                </li>
-                            </ul>
-                            <div class="fs-icon"></div>
-                        </div>
-                    </div>
 
-                    <div class="col-lg-4 portfolio-info">
-                        <h3 style="padding-top: 12px">Project information</h3>
-                        <ul>
-                            <li><strong>Category</strong>: Motion Graphics</li>
-                            <li><strong>Client</strong>: Self</li>
-                            <li><strong>Project date</strong>: March, 2022</li>
-                            <li><strong>Project URL</strong>: <a href="index.html">N/A</a></li>
-                        </ul>
-
-                        <p>
-                            Typography is an animation technique that uses moving text to capture attention, set a tone, and entertain. It seems to be everywhere right now—commercials, music videos, mobile apps, and websites use it to make their words more impactful and add an element
-                            of artistry.
-                        </p>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-        </div>
-
-
-
-        <!--
-        <div id="portfolio-details" class="portfolio-details">
-            <div class="container">
-
-                <div class="row">
-
-                    <div class="col-lg-8">
-                        <h2 class="portfolio-title">Typography</h2>
-
-                        <div class="portfolio-details-slider swiper">
-                            <div class="swiper-wrapper align-items-center">
-
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/portfolio-details-1.webp" alt="">
-                                </div>
-
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/portfolio-details-2.webp" alt="">
-                                </div>
-
+                        <div id='ninja-slider'>
+                            <div class="slider-inner">
+                                <ul>
+                                    <li>
+                                        <a class="ns-img" href="assets/img/portfolio/portfolio-details-1.webp"></a>
+                                    </li>
+                                    <li>
+                                        <div class="video">
+                                            <iframe src="https://player.vimeo.com/video/93292237" frameborder="0" allowfullscreen></iframe>
+                                        </div>
+                                        <a class="ns-img" href="assets/img/portfolio/portfolio-details-2.webp"></a>
+                                        <div class="video-playbutton-layer"></div>
+                                    </li>
+                                    <li>
+                                        <div class="video">
+                                            <iframe src="https://www.youtube.com/embed/Bp119VFEjHE?enablejsapi=1&start=216&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0" allowfullscreen data-autoplay="false"></iframe>
+                                        </div>
+                                        <a class="ns-img" href="assets/img/portfolio/portfolio-details-3.webp"></a>
+                                        <div class="caption">This video starts from 3:36</div>
+                                        <div class="video-playbutton-layer"></div>
+                                    </li>
+                                    <li>
+                                        <div class="video">
+                                            <video controls width="100%">
+                                                <source src="assets/vid/amar.mp4" type="video/mp4" />
+                                            </video>
+                                            <a class="ns-img" href="assets/img/portfolio/portfolio-details-3.webp"></a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <a class="ns-img" href="img/5.jpg"></a>
+                                        <div class="video" style="background-color:transparent;height:auto;top:auto;bottom:0px;">
+                                            <audio controls data-autoplay="1">
+                                <source src="img/mcaudio.mp3" type="audio/mpeg">
+                            </audio>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <div class="fs-icon"></div>
                             </div>
-                            <div class="swiper-pagination"></div>
                         </div>
-
                     </div>
-
                     <div class="col-lg-4 portfolio-info">
-                        <h3>Project information</h3>
+                        <h3 style="padding-top: 12px;"> <strong>Project Information</strong> </h3>
                         <ul>
                             <li><strong>Category</strong>: Motion Graphics</li>
                             <li><strong>Client</strong>: Self</li>
@@ -171,31 +144,11 @@
                             of artistry.
                         </p>
                     </div>
-
                 </div>
-
             </div>
         </div>
-
-        -->
-        <!-- End Portfolio Details -->
 
     </main>
-    <!-- End #main -->
-
-    <div class="credits">
-
-        <div class="credits-social">
-            <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        </div>
-
-
-        © 2022 | <a href="https://priyanuj.com">Priyanuj Dey</a> | All Rights Reserved
-
-    </div>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter.js"></script>
@@ -209,7 +162,6 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
